@startuml
class FundHoldServiceImpl {
~ FundHoldRepo fundHoldRepo
~ AssetsRepo assetsRepo
~ FundRepo fundRepo
~ FundTradeRepo fundTradeRepo
~ FundHisRepo fundHisRepo
+ List<FundHold> getAllFundHold(Integer)
+ boolean buyFund(BuyAndSellFundRequest)
+ boolean sellFund(BuyAndSellFundRequest)
+ LinkedList<FundTrade> getTrades(GetTradesRequest)
+ LinkedList<GetFundTrendResponse> getAllFundHoldTrend(GetTrendRequest)
}
class AssetsServiceImpl {
~ AssetsRepo repo
~ TransferRepo transferRepo
+ Assets getAssetsById(Integer)
+ Assets transferIn(Map<String,Object>)
+ Assets transferOut(Map<String,Object>)
}
class StockServiceImpl {
+ List<Stock> getAllStocks(Integer,Integer)
+ List<Stock> searchStock(Map<String,Object>)
+ Stock getStockByTicker(String)
+ List<StockHis> getStockHis(GetStockHisRequest)
}
class StockHoldServiceImpl {
~ StockRepo stockRepo
~ StockHoldRepo stockHoldRepo
~ AssetsRepo assetsRepo
~ TradeRepo tradeRepo
~ StockHisRepo stockHisRepo
+ Stock findStockByTicker(String)
+ StockHold findStockHoldByTickerAndAccount(String,Integer)
+ LinkedList<MyStockResponse> getAllStockHold(Integer)
+ boolean buyStock(BuyAndSellStockRequest)
+ boolean sellStock(BuyAndSellStockRequest)
+ LinkedList<Trade> getTrades(GetTradesRequest)
+ LinkedList<GetStockTrendResponse> getAllStockHoldTrend(GetTrendRequest)
+ List<StockHis> findStockHis(String,Date,Date)
}
class FundServiceImpl {
+ List<Fund> getAllFunds(Integer,Integer)
+ List<Fund> searchFund(Map<String,Object>)
+ Fund getFundByCode(String)
+ List<FundHis> getFundHis(GetFundHisRequest)
}
class AccountServiceImpl {
~ AccountRepo repo
~ AssetsRepo assetsRepo
+ Integer login(Account)
+ Account register(Account)
}


FundHoldService <|.. FundHoldServiceImpl
AssetsService <|.. AssetsServiceImpl
StockService <|.. StockServiceImpl
StockHoldService <|.. StockHoldServiceImpl
FundService <|.. FundServiceImpl
AccountService <|.. AccountServiceImpl
@enduml